--- a/index.html
+++ b/index.html
@@ -36,17 +36,17 @@
 
   <main class="main">
     <form class="card-form">
-      <div class="card-form__input-container">
+      <div class="card-form__input-container card-form__name-container">
         <label class="card-form__input-label" for="card-form__name">Cardholder Name</label>
         <input type="text" id="card-form__name" class="card-form__input" placeholder="e.g. Jane Appleseed" data-required="true"/>
         <p class="card-form__input-error">Is required</p>
       </div>
-      <div class="card-form__input-container">
+      <div class="card-form__input-container card-form__number-container">
         <label class="card-form__input-label" for="card-form__number">Card Number</label>
         <input type="text" id="card-form__number" class="card-form__input" placeholder="e.g. 1234 5678 9123 0000" data-required="true" data-number="true"/>
         <p class="card-form__input-error">Only numbers are allowed</p>
       </div>
-      <div class="card-form__input-container">
+      <div class="card-form__input-container card-form__date-container">
         <label class="card-form__input-label" for="card-form__month">Exp. Date (MM/YY)</label>
         <div class="card-form__date">
           <input type="text" id="card-form__month" class="card-form__input" placeholder="MM" data-required="true" data-number="true"/>
@@ -54,7 +54,7 @@
         </div>
         <p class="card-form__input-error">Is required</p>
       </div>
-      <div class="card-form__input-container">
+      <div class="card-form__input-container card-form__cvc-container">
         <label class="card-form__input-label" for="card-form__cvc">CVC</label>
         <input type="text" id="card-form__cvc" class="card-form__input" placeholder="e.g. 123" data-required="true" data-number="true"/>
         <p class="card-form__input-error">Only numbers are allowed</p>
